# badline

./: CMakeLists.txt  CMakePresets.json  README.md
demo/: CMakeLists.txt  main.cpp  parseCLI.cpp  parseCLI.hpp  parseCLI.ixx
doc/: architecture.txt
include/badline/: argParser.hpp  renderEngine.hpp  scopedLogger.hpp
src/: CMakeLists.txt  main.cpp
src/argParser/: CMakeLists.txt  argParser.cpp  argParser.ixx  dummyLoggerImpl.cpp  interface.cpp  internals.cpp  internals.hpp  requiredLoggerInterface.hpp  testSplitter.cpp
src/argParser/private/: argParser.hpp
src/argParser/test/: CMakeLists.txt  splitter.cpp
src/renderEngine/: CMakeLists.txt  dummyLoggerImpl.cpp  interface.cpp  internals.hpp  renderEngine.cpp  requiredLoggerInterface.hpp  vk_mem_alloc.h  vulkanMemoryAllocator.cpp
src/renderEngine/private/: renderEngine.hpp
src/scopedLogger/: CMakeLists.txt  interface.cpp  internals.cpp  internals.hpp  result.hpp  scopedLogger.cpp  scopedLogger.ixx
src/scopedLogger/private/: scopedLogger.cpp  scopedLogger.hpp
src/test/: CMakeLists.txt  loggerInterfaceTest.cmake  loggerInterfaceTest.cpp  testSplitter.cmake  testSplitter.cpp
